apps/klank/app/components/menu/menu.module.css
.container {
  display: flex;
  flex-direction: column;
  border-right: 1px solid var(--klank-color-border);
  overflow: hidden;
  font-size: 14px;
  color: var(--klank-color-text);
  height: 100dvh;

  > li:first-of-type {
    display: flex;
    align-items: center;
    gap: 8px;
    font-weight: 700;
    padding: 8px;
    border-bottom: 1px solid var(--klank-color-border);
  }

  > .treeWrapper {
    flex: 1;
    overflow-y: auto;
    min-height: 0;
  }
}

.container[data-collapsed="true"] .logoText {
  display: none;
}

.container[data-collapsed="true"] > li:first-of-type {
  justify-content: center;
}

.logoText {}

.tabMenu {
  display: flex;
  gap: 8px;
  text-align: center;
  border-bottom: 1px solid var(--klank-color-border);
  button {
    width: 100%;
    padding: 2px;
    &:nth-child(even) {
      border-left: 1px solid var(--klank-color-border);
      border-right: 1px solid var(--klank-color-border);
    }
  }

}

